<resources>
    <string name="app_name">Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_banana">Banana</string>
    <string name="title_grapes">Grapes</string>
    <string name="title_pumpkin">Pumpkin</string>
    <string name="title_carrot">Carrot</string>
    <string name="title_Rasberry">Rasberry</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_menu">MAIN MENU</string>
    <string name="support">SUPPORT</string>
    <string name="contact_map">Contact Map</string>
    <string name="support_line">Support Line</string>
    <string name="account">ACCOUNT</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="news">News</string>
    <string name="favorites">Favorites</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">Sign</string>
    <string name="with">with</string>
    <string name="or">or</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="conpassword">Confirm Password</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="terms">I agree with the terms and conditions</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_in">SignInActivity</string>
</resources>
