<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">


    <item
        android:title="@string/main_menu">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home_black_24dp"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_messages"
                android:icon="@drawable/ic_dashboard_black_24dp"
                android:title="@string/messages" />
            <item
                android:id="@+id/nav_news"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/news" />
            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/favorites" />
        </menu>
    </item>


    <item
        android:title="@string/support">
        <menu>
            <item
                android:id="@+id/nav_conMap"
                android:icon="@android:drawable/ic_dialog_map"
                android:title="@string/contact_map" />
            <item
                android:id="@+id/nav_supportLine"
                android:icon="@android:drawable/stat_sys_phone_call"
                android:title="@string/support_line" />
        </menu>
    </item>

    <item
        android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
