<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.maps.SignInActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="32sp"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/with"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signIn"
            android:layout_alignRight="@id/signIn"
            android:layout_marginTop="8dp"
            android:text="@string/with"
            android:textSize="16sp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/with"
            android:layout_marginTop="14dp" />

        <com.facebook.login.widget.LoginButton
            xmlns:facebook="http://schemas.android.com/apk/res-auto"
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/with"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@id/sign_in_button"
            facebook:confirm_logout="false"
            facebook:fetch_user_info="true"
            android:text="testing 123"
            facebook:login_text="LOGIN"
            facebook:logout_text="LOGOUT"/>

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_in_button"
            android:layout_marginTop="16dp"
            android:text="@string/or"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/or"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/editText"
            android:hint="@string/username"
            android:text="" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/username"
            android:layout_alignStart="@+id/username"
            android:layout_below="@+id/username"
            android:layout_centerVertical="true"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/editText"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email"
            android:layout_alignStart="@+id/email"
            android:layout_below="@+id/email"
            android:inputType="textPassword"
            android:layout_centerVertical="true"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/editText"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/conpassword"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_below="@+id/password"
            android:inputType="textPassword"
            android:layout_centerVertical="true"
            android:background="@android:drawable/editbox_background"
            android:backgroundTint="@color/editText"
            android:hint="@string/conpassword"/>

        <CheckBox
            android:id="@+id/terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/conpassword"
            android:layout_marginTop="19dp"
            android:text="@string/terms"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/signup"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_below="@+id/terms"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="41dp"
            android:background="@drawable/button_round_rect_border"
            android:textColor="@android:color/white"
            android:text="@string/sign_up"
            android:textSize="16sp" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
